--- a/web_dielo/templates/home.html
+++ b/web_dielo/templates/home.html
@@ -14,6 +14,9 @@
     <h1>Welcome to My Manga Online Bookstore</h1>
     <form action="/destacados" method="get">
         <div id="highlightContent">
+            {% for item in featured_content %}
+                <li>{{ item }}</li>
+            {% endfor %}
             <!-- Add your highlight content here in a 3x3 grid -->
         </div>
     </form>
