--- a/web_dielo/templates/home.html
+++ b/web_dielo/templates/home.html
@@ -6,12 +6,13 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">libreria</a></li>
-            <li><a href="#">carrito</a></li>
+            <form action="/deseados" method="post"><li><button type="submit">Lista de Deseados</button></li></form>
+            <form action="/carrito" method="post"><li><button type="submit">Carrito de compras</button></li></form>
         </ul>
     </nav>
-    <h1>Welcome to My Manga Online Bookstore</h1>
+    <h1>Bienvenido a la biblioteca de manga virtual</h1>
+    <br>
+    <h2>Destacados</h2>
     <form action="/destacados" method="get">
         <div id="highlightContent">
             {% for item in featured_content %}
