--- a/web_dielo/templates/admin.html
+++ b/web_dielo/templates/admin.html
@@ -6,7 +6,13 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#">Contenido Destacado</a></li>
+            <li><div id="uploadModal" class="modal">
+                <form class="modal-content">
+                    <h1>Upload File</h1>
+                    <input type="file" id="file" name="file">
+                    <button type="submit">Submit</button>
+                </form>
+            </div></li>
             <li><a href="#">libreria</a></li>
             <li><a href="#">carrito</a></li>
             
