--- a/web_dielo/templates/home.html
+++ b/web_dielo/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="../css/index.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <tittle>Bienvenido a la biblioteca de manga virtual</tittle>
 </head>
 <body>
@@ -9,6 +9,7 @@
         <ul>
             <form action="/deseados"><li><button type="submit">Lista de Deseados</button></li></form>
             <form action="/catalogo"><li><button type="submit">Catálogo de mangas</button></li></form>
+            <form action="/logout"><li><button type="submit">Cerrar sesión</button></li></form>
         </ul>
     </nav>
     <br>
