--- a/web_dielo/templates/catalogo.html
+++ b/web_dielo/templates/catalogo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="../css/index.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <tittle>Bienvenido a la biblioteca de manga virtual</tittle>
 </head>
 <body>
