--- a/web_dielo/templates/login.html
+++ b/web_dielo/templates/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <title>Bienvenido</title>
 </head>
 <body>
@@ -14,7 +15,7 @@
         <label for="email">Email:</label><br>
         <input type="email" id="email" name="email" required><br>
         <label for="password">Password:</label><br>
-        <input type="password" id="password" name="password" required><br>
+        <input type="password" id="password" name="password" required><br><br>
         <button type="submit">Enviar</button>
     </form>
     {% if error %}
