--- a/web_dielo/templates/deseados.html
+++ b/web_dielo/templates/deseados.html
@@ -6,6 +6,7 @@
     <title>Lista de Deseados</title>
 </head>
 <body>
+    {% include 'navbar.html' %}
     <nav>
         <ul>
             <li><form action="/home"><button type="submit">Home</button></form></li>
