--- a/web_dielo/templates/resultado.html
+++ b/web_dielo/templates/resultado.html
@@ -7,6 +7,7 @@
     <title>Resultado</title>
 </head>
 <body>
+    {% include 'navbar.html' %}
     <h1>Resultado del Servicio</h1>
     <p><strong>Servicio:</strong> {{ service }}</p>
     <p><strong>Datos enviados:</strong> {{ input_data }}</p>
