--- a/web_dielo/static/css/catalogo.css
+++ b/web_dielo/static/css/catalogo.css
@@ -24,3 +24,24 @@
     background-color: #333;
     color: white;
 }
+body{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+#catalogo-container{
+    flex-grow: 1;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 11px
+}
+#filter-container{
+    display: flex;
+    justify-content: space-around;
+}
+#search-form{
+    display: flex;
+    align-items: center;
+}
