--- a/web_dielo/templates/catalogo.html
+++ b/web_dielo/templates/catalogo.html
@@ -1,53 +1,81 @@
 <!DOCTYPE html>
 <html>
 <head>
-<<<<<<< HEAD
-    <link rel="stylesheet" type="text/css" href="index.css">
-    <tittle>Bienvenido a la biblioteca de manga virtual</tittle>
-=======
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+    crossorigin="anonymous"
+  />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/catalogo.css') }}">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/navbar.css') }}">
+    <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/navbar.css') }}"> -->
+    
     <title>Bienvenido a la biblioteca de manga virtual</title>
->>>>>>> 2bd06ab6ce5f90bbd23ccd859820bbb7aa5c70c4
 </head>
 <body>
-    <nav>
+    {% include 'navbar.html' %}
+    <!-- <nav>
         <ul>
             <form action="/deseados"><li><button type="submit">Lista de Deseados</button></li></form>
             <form action="/home"><li><button type="submit">Home</button></li></form>
         </ul>
-    </nav>
-    <br>
-    <h2>Catálogo de mangas</h2>
-    <br>
-    <form action="/buscar-mangas" method="get">
-        <label for="busqueda">Buscar manga:</label>
-        <input type="text" id="busqueda-mangas" name="busqueda-mangas" required>
-        <button type="submit">Buscar</button>
-    </form>
-    <br>  
-    <form action="/destacados" method="get">
-        <div id="highlightContent">
-<<<<<<< HEAD
-            {% for item in mangas %}
-                <li>{{ item }}</li>
-            {% endfor %}
-            <!-- Add your highlight content here in a 3x3 grid -->
-=======
-            <table>
-                <tr>
-                    <th>Manga</th>
-                    <th>Genre</th>
-                </tr>
-                {% for manga, genre in mangas %}
-                    <tr>
-                        <td>{{ manga }}</td>
-                        <td>{{ genre }}</td>
-                    </tr>
-                {% endfor %}
-            </table>
->>>>>>> 2bd06ab6ce5f90bbd23ccd859820bbb7aa5c70c4
+    </nav> -->
+    <div id="catalogo-container">
+        <div id="filter-container">
+            <br>
+            <h1>Catálogo de mangas</h1>
+            <br>
+            <form action="/buscar-mangas" id="search-form" method="get">
+                <label for="busqueda">Buscar manga:</label>
+                <input type="text" id="busqueda-mangas" name="busqueda-mangas" required>
+                <button type="submit">Buscar</button>
+            </form>
+            <br>  
         </div>
-    </form>
+        <form action="/destacados" method="get">
+            <div id="highlightContent">
+                <!-- <table class="table">
+                    <tr>
+                        <th>Manga</th>
+                        <th>Genre</th>
+                    </tr>
+                    {% for manga_id, manga, genre in mangas %}
+                        <tr>
+                            <td><a href="manga/{{manga_id}}">{{ manga }}</a></td>
+                            <td>{{ genre }}</td>
+                        </tr>
+                    {% endfor %}
+                </table> -->
+    
+                <table class="table table-hover">
+                    <thead>
+                      <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Manga</th>
+                        <th scope="col">Genre</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                        {% for manga_id, manga, genre in mangas %}
+                        <tr>
+                            <td>{{loop.index}}</td>
+                            <td><a href="manga/{{manga_id}}">{{ manga }}</a></td>
+                            <td>{{ genre }}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                  </table>
+    
+    
+            </div>
+        </form>
+    </div>
+    
+    <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"
+  ></script>
+  
 </body>
 </html>
