--- a/web_dielo/static/css/admin.css
+++ b/web_dielo/static/css/admin.css
@@ -33,7 +33,7 @@ input[type=text], input[type=file] {
 
 /* Buttons */
 button[type=submit], button[type=button] {
-    background-color: #4CAF50;
+    background-color: #353535;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
