--- a/web_dielo/templates/navbar.html
+++ b/web_dielo/templates/navbar.html
@@ -17,7 +17,7 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              BOB
+              Cerrar sesión
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="/logout">Salir</a></li>
