--- a/web_dielo/templates/register.html
+++ b/web_dielo/templates/register.html
@@ -21,6 +21,9 @@
             <input type="password" id="password" name="password" required><br><br>
             <button id="register" type="submit">Enviar</button>
         </form>
+        <form action="/logeo">
+            <button id="logeo" type="submit">Iniciar Sesión</button>
+        </form>
     </div>
     {% if error %}
         <p style="color: red;">{{ error }}</p>
