--- a/web_dielo/static/css/catalogo.css
+++ b/web_dielo/static/css/catalogo.css
@@ -34,7 +34,7 @@ body{
     padding: 50px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     gap: 11px
 }
 #filter-container{
@@ -44,4 +44,9 @@ body{
 #search-form{
     display: flex;
     align-items: center;
+}
+
+.manga-link {
+    text-decoration: none; /* Elimina el subrayado */
+    color: rgb(0, 38, 165); /* Opcional: mantiene el color del texto igual al texto circundante */
 }
