--- a/web_dielo/static/css/deseados.css
+++ b/web_dielo/static/css/deseados.css
@@ -1,30 +1,50 @@
-.wishlist-table {
+/* Styles for the Lista de Deseados */
+#highlightContent {
+    width: 80%;
+    margin: auto;
+}
+
+#highlightContent table {
     width: 100%;
     border-collapse: collapse;
 }
-.wishlist-table th, .wishlist-table td {
+
+#highlightContent table th,
+#highlightContent table td {
     border: 1px solid #ddd;
     padding: 8px;
-}
-.wishlist-table th {
-    background-color: #f2f2f2;
     text-align: left;
 }
-nav ul {
-    list-style-type: none;
-    padding: 0;
-}
-nav ul li {
-    display: inline;
-    margin-right: 10px;
-}
-nav ul li form button {
-    padding: 10px 15px;
-    background-color: #000000;
+
+#highlightContent table th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #333;
     color: white;
-    border: none;
-    cursor: pointer;
 }
-nav ul li form button:hover {
-    background-color: #000000;
+
+body {
+    display: flex;
+    flex-direction: column;
+   
+}
+
+#catalogo-container {
+    flex-grow: 1;
+    padding: 20px; /* Reduced padding */
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start; /* Align items at the start */
+    gap: 11px;
+}
+
+#filter-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.manga-link {
+    text-decoration: none; /* Elimina el subrayado */
+    color: rgb(0, 38, 165); /* Opcional: mantiene el color del texto igual al texto circundante */
 }
