--- a/web_dielo/templates/catalogo.html
+++ b/web_dielo/templates/catalogo.html
@@ -8,74 +8,57 @@
     crossorigin="anonymous"
   />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/catalogo.css') }}">
-    <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/navbar.css') }}"> -->
     
-    <title>Bienvenido a la biblioteca de manga virtual</title>
+    <title>Catalogo</title>
 </head>
 <body>
     {% include 'navbar.html' %}
-    <!-- <nav>
-        <ul>
-            <form action="/deseados"><li><button type="submit">Lista de Deseados</button></li></form>
-            <form action="/home"><li><button type="submit">Home</button></li></form>
-        </ul>
-    </nav> -->
+
     <div id="catalogo-container">
         <div id="filter-container">
             <br>
             <h1>Catálogo de mangas</h1>
             <br>
-            <form action="/buscar-mangas" id="search-form" method="get">
-                <label for="busqueda">Buscar manga:</label>
-                <input type="text" id="busqueda-mangas" name="busqueda-mangas" required>
+            <form action="/buscar-mangas" method="post">
+                <input type="text" name="search" placeholder="Buscar mangas...">
                 <button type="submit">Buscar</button>
             </form>
             <br>  
         </div>
         <form action="/destacados" method="get">
             <div id="highlightContent">
-                <!-- <table class="table">
-                    <tr>
-                        <th>Manga</th>
-                        <th>Genre</th>
-                    </tr>
-                    {% for manga_id, manga, genre in mangas %}
-                        <tr>
-                            <td><a href="manga/{{manga_id}}">{{ manga }}</a></td>
-                            <td>{{ genre }}</td>
-                        </tr>
-                    {% endfor %}
-                </table> -->
     
+                {% if mangas %}
                 <table class="table table-hover">
-                    <thead>
-                      <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Manga</th>
-                        <th scope="col">Genre</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                        {% for manga_id, manga, genre in mangas %}
-                        <tr>
-                            <td>{{loop.index}}</td>
-                            <td><a href="manga/{{manga_id}}">{{ manga }}</a></td>
-                            <td>{{ genre }}</td>
-                        </tr>
-                    {% endfor %}
-                    </tbody>
-                  </table>
-    
-    
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Manga</th>
+                                <th scope="col">Genre</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                                {% for manga_id, manga, genre in mangas %}
+                                <tr>
+                                        <td>{{ loop.index }}</td>
+                                        <td><a href="manga/{{ manga_id }}" class="manga-link">{{ manga }}</a></td>
+                                        <td>{{ genre }}</td>
+                                </tr>
+                                {% endfor %}
+                        </tbody>
+                </table>
+                {% else %}
+                <div class="alert alert-warning" role="alert">
+                    No hay mangas con ese resultado.
+                </div>
+                {% endif %}
             </div>
         </form>
     </div>
-    
     <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"
   ></script>
-  
 </body>
 </html>
