--- a/web_dielo/templates/deseados.html
+++ b/web_dielo/templates/deseados.html
@@ -1,35 +1,55 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/navbar.css') }}">
+    <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+    crossorigin="anonymous"
+  />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/deseados.css') }}">
     <title>Lista de Deseados</title>
 </head>
 <body>
     {% include 'navbar.html' %}
-    <nav>
-        <ul>
-            <li><form action="/home"><button type="submit">Home</button></form></li>
-            <li><form action="/deseados"><button type="submit">Lista de Deseados</button></form></li>
-        </ul>
-    </nav>
-    <br>
-    <h2>Lista de Deseados</h2>
-    <table class="wishlist-table">
-        <thead>
-            <tr>
-                <th>Nombre del Manga</th>
-                <th>Precio</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for manga in mangas %}
-                <tr>
-                    <td>{{ manga.name }}</td>
-                    <td>{{ manga.price }}</td>
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+
+    <div id="catalogo-container">
+        <div id="filter-container">
+            <h1>Lista de Deseados</h1>
+        </div>
+        <div id="highlightContent">
+            {% if mangas %}
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Nombre del Manga</th>
+                        <th>Precio</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for manga in mangas %}
+                    <tr>
+                        <td>{{ loop.index }}</td>
+                        <td>{{ manga.name }}</td>
+                        <td>{{ manga.price }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            {% else %}
+            <div class="alert alert-warning" role="alert">
+                No hay mangas en tu lista de deseos.
+            </div>
+            {% endif %}
+        </div>
+    </div>
 </body>
+
+<script
+src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+crossorigin="anonymous"
+></script>
+
 </html>
