--- a/web_dielo/templates/home.html
+++ b/web_dielo/templates/home.html
@@ -2,24 +2,17 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css') }}">
-    <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/navbar.css') }}"> -->
     <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
     crossorigin="anonymous"
   />
-    <title>Bienvenido a la biblioteca de manga virtual</title>
+    <title>Bienvenido!</title>
 </head>
 <body>
     {% include 'navbar.html' %}
-    <!-- <nav>
-        <ul>
-            <li><form action="/deseados"><button type="submit">Lista de Deseados</button></form></li>
-            <li><form action="/catalogo"><button type="submit">Catálogo de mangas</button></form></li>
-            <li><form action="/logout"><button type="submit">Cerrar sesión</button></form></li>
-        </ul>
-    </nav> -->
+
     <br>
     <h2>Destacados</h2>
     <form action="/destacados" method="get">
