--- a/web_dielo/templates/navbar.html
+++ b/web_dielo/templates/navbar.html
@@ -1,28 +1,28 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Manga Ebook</a>
+      <span class="navbar-brand">Manga Ebook</span>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/home">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/deseados">Lista de Deseados</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/catalogo">Catálogo de mangas</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Cerrar sesión
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/logout">Salir</a></li>
-            </ul>
-          </li>
+            <li class="nav-item">
+                <a class="nav-link {{ 'active' if request.path == url_for('home') else '' }}" aria-current="page" href="{{ url_for('home') }}">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link {{ 'active' if request.path == url_for('deseados') else '' }}" href="{{ url_for('deseados') }}">Lista de Deseados</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link {{ 'active' if request.path == url_for('catalogo') else '' }}" href="{{ url_for('catalogo') }}">Catálogo de mangas</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle {{ 'active' if request.path == url_for('logout') else '' }}" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Cerrar sesión
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="{{ url_for('logout') }}">Salir</a></li>
+                </ul>
+            </li>
         </ul>
 
       </div>
