--- a/web_dielo/templates/manga_page.html
+++ b/web_dielo/templates/manga_page.html
@@ -28,6 +28,7 @@
             <h5 id="publication_status">{{ manga_info.publication_status}}</h5>
             <h5 id="genre">{{ manga_info.genre}}</h5>
             <h5 id="price">${{ manga_info.price}}</h5>
+            <h5 id="average_rating">Valoración: {{ average_rating }}</h5>
           </div>
           
           <hr/>
