--- a/web_dielo/templates/manga_page.html
+++ b/web_dielo/templates/manga_page.html
@@ -28,7 +28,22 @@
             <h5 id="publication_status">{{ manga_info.publication_status}}</h5>
             <h5 id="genre">{{ manga_info.genre}}</h5>
             <h5 id="price">${{ manga_info.price}}</h5>
-            <h5 id="average_rating">Valoración: {{ average_rating }}</h5>
+            <h5 id="average_rating">Valoración:</h5>
+            {% set full_stars = average_rating|int %}
+            {% set half_star = 1 if average_rating - full_stars >= 0.5 else 0 %}
+            {% set empty_stars = 5 - full_stars - half_star %}
+            
+            {% for _ in range(full_stars) %}
+              &#9733; <!-- Estrella completa -->
+            {% endfor %}
+            
+            {% if half_star %}
+              &#189; <!-- Media estrella -->
+            {% endif %}
+            
+            {% for _ in range(empty_stars) %}
+              &#9734; <!-- Estrella vacía -->
+            {% endfor %}
           </div>
           
           <hr/>
