--- a/web_dielo/templates/carrito.html
+++ b/web_dielo/templates/carrito.html
@@ -5,26 +5,55 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Carrito de Compras</title>
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/carrito.css') }}">
-    <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-    crossorigin="anonymous"
+	<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+	crossorigin="anonymous"
   />
 </head>
 <body>
 	{% include 'navbar.html' %}
-	<div class="container">
-		<h1>Carrito de Compras</h1>
-		{% if cart_items %}
-			<ul>
-				{% for item in cart_items %}
-					<li>{{ item }}</li>
-				{% endfor %}
-			</ul>
-		{% else %}
-			<p>Tu carrito de compras está vacío.</p>
-		{% endif %}
+
+	<div id="catalogo-container">
+		<div id="filter-container">
+			<h1>Carrito de Compras</h1>
+		</div>
+		<div id="highlightContent">
+			{% if items %}
+			<table class="table table-hover">
+				<thead>
+					<tr>
+						<th>Precio</th>
+						<th>Producto</th>
+						<th>Acción</th> <!-- Nueva columna para el botón de eliminar -->
+					</tr>
+				</thead>
+				<tbody>
+					{% for item in items %}
+					<tr>
+						<td>{{ item[2] }}</td>
+						<td>{{ item[3] }}</td>
+						<td>
+							<!-- Botón de eliminar para cada producto -->
+							<button class="btn btn-danger btn-sm" onclick="deleteItem('{{ item[0] }}')">Eliminar</button>
+						</td>
+					</tr>
+					{% endfor %}
+					<tr>
+						<td><strong>Total:</strong></td>
+						<td>{{ total }}</td>
+						<td></td> <!-- Celda vacía para mantener el formato de la tabla -->
+					</tr>
+				</tbody>
+			</table>
+			<button id="checkout-button" class="btn btn-primary">Checkout</button>
+			{% else %}
+			<div class="alert alert-warning" role="alert">
+				No hay productos en tu carrito.
+			</div>
+			{% endif %}
+		</div>
 	</div>
 </body>
 
@@ -33,4 +62,23 @@ src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.j
 integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
 crossorigin="anonymous"
 ></script>
+
+<script>
+	function deleteItem(itemId) {
+		fetch('/del_cart_item', {
+			method: 'POST',
+			headers: {
+				'Content-Type': 'application/json',
+			},
+			body: JSON.stringify({itemId: itemId})
+		}).then(response => {
+			if (response.ok) {
+				// Recarga la página o elimina la fila de la tabla para reflejar los cambios
+				window.location.reload();
+			} else {
+				alert('No se pudo eliminar el ítem.');
+			}
+		}).catch(error => console.error('Error:', error));
+	}
+	</script>
 </html>
