--- a/web_dielo/templates/carrito.html
+++ b/web_dielo/templates/carrito.html
@@ -47,7 +47,8 @@
 					</tr>
 				</tbody>
 			</table>
-			<button id="checkout-button" class="btn btn-primary">Checkout</button>
+			<form action="/checkout" method="POST">
+				<button id="checkout-button" type="submit" class="btn btn-primary">Comprar</button>
 			{% else %}
 			<div class="alert alert-warning" role="alert">
 				No hay productos en tu carrito.
