--- a/web_dielo/templates/admin.html
+++ b/web_dielo/templates/admin.html
@@ -15,6 +15,9 @@
     </nav>
     <br>
     <h2>Todos los Mangas</h2>
+    <h2> Ventas diarias</h2>
+    <h2> Ventas mensuales</h2>
+    <h2> Ventas anuales</h2>
     <div id="highlightContent" class="grid-container">
         {% for manga in mangas %}
             <div class="grid-item">
