--- a/web_dielo/templates/admin.html
+++ b/web_dielo/templates/admin.html
@@ -11,6 +11,7 @@
             <li><form action="/logout"><button type="submit">Cerrar sesión</button></form></li>
             <li><form action="/notificar"><button type="submit">Notificar contenido destacado</button></form></li>
             <li><button type="button" onclick="document.getElementById('uploadModal').style.display='block'">Subir Manga</button></li>
+            <li><form action="/editarmanga"><button type="submit">Administrar</button></form></li>
         </ul>
     </nav>
     <br>
